Updated angular version from 7 to 9, Staxter specific changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<real-header (toggleSidebarEvent)="toggleSidebar()"></real-header>
-<real-sidebar #searchUISidebar></real-sidebar>
+<staxter-header (toggleSidebarEvent)="toggleSidebar()"></staxter-header>
+<staxter-sidebar #searchUISidebar></staxter-sidebar>
