--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,1 +1,1 @@
-<h2 class="real-page-title"> {{ 'DASHBOARD_TITLE' | translate }} </h2>
+<h2 class="staxter-page-title"> {{ 'DASHBOARD_TITLE' | translate }} </h2>
