--- a/src/assets/styles/real-theme.scss
+++ b/src/assets/styles/real-theme.scss
@@ -9,7 +9,7 @@ $mat-pink: (
   200: #f48fb1,
   300: #f06292,
   400: #ec407a,
-  500: $real-app-accent,
+  500: $staxter-app-accent,
   600: #d81b60,
   700: #c2185b,
   800: #ad1457,
@@ -36,9 +36,9 @@ $mat-pink: (
   )
 );
 
-$real-app-primary: mat-palette($mat-blue-grey);
-$real-app-accent:  mat-palette($mat-pink, 500, 900, A100);
-$real-app-warn:    mat-palette($mat-deep-orange);
+$staxter-app-primary: mat-palette($mat-blue-grey);
+$staxter-app-accent:  mat-palette($mat-pink, 500, 900, A100);
+$staxter-app-warn:    mat-palette($mat-deep-orange);
 
-$real-app-theme: mat-light-theme($real-app-primary, $real-app-accent, $real-app-warn);
-@include angular-material-theme($real-app-theme);
+$staxter-app-theme: mat-light-theme($staxter-app-primary, $staxter-app-accent, $staxter-app-warn);
+@include angular-material-theme($staxter-app-theme);
