--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -7,4 +7,5 @@ $flag-icon-css-path: '../../../node_modules/flag-icon-css/flags' !default;
 @import "./header.scss";
 @import "./sidebar.scss";
 @import "./dashboard.scss";
+@import "./latest.rates.scss";
 
