--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -2,7 +2,9 @@ $link-color: #3498db;
 $dark-grey: #999;
 $light-grey: #ccc;
 $page-title-color: #66615b;
-$primary: #05729d;
+$primary: #129ad0;
+$secondary: #006b9d;
+$main-color: #05729d;
 
 $border-color: $light-grey;
 $border-radius: 4px;
