--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -8,4 +8,5 @@ $flag-icon-css-path: '../../../node_modules/flag-icon-css/flags' !default;
 @import "./sidebar.scss";
 @import "./dashboard.scss";
 @import "./latest.rates.scss";
+@import "./top.five.scss";
 
