--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -9,4 +9,5 @@ $flag-icon-css-path: '../../../node_modules/flag-icon-css/flags' !default;
 @import "./dashboard.scss";
 @import "./latest.rates.scss";
 @import "./top.five.scss";
+@import "./latest.rates.currency.wise.details.component.scss";
 
