Developed last 30 days page

--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -10,4 +10,6 @@ $flag-icon-css-path: '../../../node_modules/flag-icon-css/flags' !default;
 @import "./latest.rates.scss";
 @import "./top.five.scss";
 @import "./latest.rates.currency.wise.details.component.scss";
+@import "./last30days.scss";
+
 
