--- a/src/app/pages/last30days/last30days.component.html
+++ b/src/app/pages/last30days/last30days.component.html
@@ -1,3 +1,29 @@
 <h2 class="staxter-page-title"> {{ 'LAST_30_DAYS_TITLE' | translate }} </h2>
 
-<h4 class="text-center">Page under construction ...</h4>
+<div class="row">
+    <div class="col-lg-12">
+        <mat-form-field id="staxter-comparison-currency-dropdown">
+        <mat-label>{{ 'COMPARISON_CURRENCY' | translate }}</mat-label>
+        <mat-select [(value)]="comparisonCurrency" (selectionChange)="comparisonCurrencyChange(comparisonCurrency)">
+            <mat-option [value]="option.value" *ngFor="let option of comparisonCurrencies" [disabled]="makeDisable(option)">{{ option.viewValue }}</mat-option>
+        </mat-select>
+        </mat-form-field>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-lg-12">
+        <div>
+          <div style="display: block">
+            <canvas baseChart
+              [datasets]="barChartData"
+              [labels]="barChartLabels"
+              [options]="barChartOptions"
+              [plugins]="barChartPlugins"
+              [legend]="barChartLegend"
+              [chartType]="barChartType">
+            </canvas>
+          </div>
+        </div>
+      </div>
+</div>
