--- a/src/app/pages/latest.rates.currency.wise.details/latest.rates.currency.wise.details.component.html
+++ b/src/app/pages/latest.rates.currency.wise.details/latest.rates.currency.wise.details.component.html
@@ -2,17 +2,19 @@
 
 <a [routerLink]="[latestRatesURL]" class="staxter-go-back-btn"><mat-icon class="material-icons">arrow_back</mat-icon> {{ 'BACK' | translate }}</a>
 
-<div>
-    <div>
-      <div style="display: block">
-        <canvas baseChart
-          [datasets]="barChartData"
-          [labels]="barChartLabels"
-          [options]="barChartOptions"
-          [plugins]="barChartPlugins"
-          [legend]="barChartLegend"
-          [chartType]="barChartType">
-        </canvas>
+<div class="row">
+  <div class="col-lg-12">
+      <div>
+        <div style="display: block">
+          <canvas baseChart
+            [datasets]="barChartData"
+            [labels]="barChartLabels"
+            [options]="barChartOptions"
+            [plugins]="barChartPlugins"
+            [legend]="barChartLegend"
+            [chartType]="barChartType">
+          </canvas>
+        </div>
       </div>
     </div>
-  </div>
+</div>
