--- a/src/assets/styles/_basic.scss
+++ b/src/assets/styles/_basic.scss
@@ -16,14 +16,14 @@ body {
     #staxter-currency-dropdown {
       position: absolute;
       right: 1rem;
-      top: 0;
+      top: 3rem;
     }
   }
 
   .staxter-page-title {
     color: $page-title-color;
     font-weight: 400;
-    margin-bottom: 1rem;
+    margin-bottom: 5rem;
   }
 
   .staxter-tooltip {
